Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+4.8.0
+=====
+- Restart tray allocation if number of rows overflows (bug #7055).
+- Restart systray manager on compositing changes.
+- Add additional debugging information with filtering support.
+- Fix tasklist craches on window unmap (bug #7076).
+- Translation updates: French, German, Arabic, Russian, Portuguese,
+  Romanian, Lithuanian, Swedish, Chinese (Taiwan), Greek, Polish,
+  Croatian, Hungarian, Catalan (Valencian), Norwegian Bokmal.
+
 4.7.7
 =====
 - Bind panel translation domain for external plugins (bug #6932).
