--- a/po/ro.po
+++ b/po/ro.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-01-12 05:09+0000\n"
+"POT-Creation-Date: 2011-01-16 17:01+0100\n"
 "PO-Revision-Date: 2011-01-15 22:00+0200\n"
 "Last-Translator: Mișu Moldovan <dumol@xfce.org>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
@@ -298,8 +298,7 @@ msgstr "Introduceți aici termenii de căutat"
 #, c-format
 msgid "Plugin \"%s\" unexpectedly left the panel, do you want to restart it?"
 msgstr ""
-"Modulul „%s” din panou s-a terminat în mod neașteptat. Doriți să-l "
-"reporniți?"
+"Modulul „%s” din panou s-a terminat în mod neașteptat. Doriți să-l reporniți?"
 
 #: ../panel/panel-plugin-external.c:422
 #, c-format
@@ -483,7 +482,8 @@ msgstr ""
 
 #: ../panel/panel-preferences-dialog.glade.h:30
 msgid "Select this option to extend the panel over multiple monitors."
-msgstr "Alegeți această opțiune pentru a extinde panoul pe mai multe monitoare."
+msgstr ""
+"Alegeți această opțiune pentru a extinde panoul pe mai multe monitoare."
 
 #: ../panel/panel-preferences-dialog.glade.h:31
 msgid ""
@@ -498,8 +498,7 @@ msgid ""
 "only works when the panel is attached to a screen edge."
 msgstr ""
 "Alegeți această opțiune pentru a ascunde panoul când cursorul mausului nu "
-"este deasupra sa. E necesar ca panoul să fie atașat unei margini a "
-"ecranului."
+"este deasupra sa. E necesar ca panoul să fie atașat unei margini a ecranului."
 
 #: ../panel/panel-preferences-dialog.glade.h:33
 msgid "Show about information of the currently selected item"
@@ -1206,8 +1205,8 @@ msgid ""
 msgstr ""
 "Introduceți o listă de modele ce vor fi folosite pentru a determina ce "
 "fișiere vor fi vizibile într-un director. Dacă specificați aici mai mult de "
-"un model, separați lista elementelor prin punct și virgulă (de ex. "
-"*.txt;*.doc)."
+"un model, separați lista elementelor prin punct și virgulă (de ex. *.txt;*."
+"doc)."
 
 #: ../plugins/directorymenu/directorymenu-dialog.glade.h:4
 #: ../plugins/tasklist/tasklist-dialog.glade.h:5
@@ -1341,8 +1340,7 @@ msgstr "Opțiuni pentru _spații de lucru..."
 
 #: ../plugins/pager/pager.c:429
 msgid "Unable to open the workspace settings"
-msgstr ""
-"Nu s-a putut deschide fereastra opțiunilor pentru spațiile de lucru"
+msgstr "Nu s-a putut deschide fereastra opțiunilor pentru spațiile de lucru"
 
 #: ../plugins/pager/pager-buttons.c:555 ../plugins/windowmenu/windowmenu.c:854
 #, c-format
