--- a/po/hr.po
+++ b/po/hr.po
@@ -7,18 +7,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-01-14 11:09+0000\n"
+"POT-Creation-Date: 2011-01-16 17:01+0100\n"
 "PO-Revision-Date: 2010-06-11 23:34+0200\n"
 "Last-Translator: Ivica Kolić<ikoli@yahoo.com> <>\n"
 "Language-Team: Croatian <>\n"
+"Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: hr\n"
-"Plural-Forms: nplurals=3; p xfce4-panellural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; p xfce4-panellural=(n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: ../panel-desktop-handler.desktop.in.h:1
-msgid "Add a new launcher to the panel based on the information of this desktop file"
+msgid ""
+"Add a new launcher to the panel based on the information of this desktop file"
 msgstr ""
 
 #: ../panel-desktop-handler.desktop.in.h:2
@@ -40,8 +42,12 @@ msgid "_Read Online"
 msgstr "_Čitaj online"
 
 #: ../common/panel-utils.c:156
-msgid "You can read the user manual online. This manual may however not exactly match your panel version."
-msgstr "Možete čitati korisnički priručnik online.Ovaj priručnik možda ne odgovara vašoj veriji ploče."
+msgid ""
+"You can read the user manual online. This manual may however not exactly "
+"match your panel version."
+msgstr ""
+"Možete čitati korisnički priručnik online.Ovaj priručnik možda ne odgovara "
+"vašoj veriji ploče."
 
 #: ../common/panel-utils.c:158
 msgid "The user manual is not installed on your computer"
@@ -184,8 +190,12 @@ msgid "Failed to send D-Bus message"
 msgstr "Neuspjelo slanje D-bus poruke"
 
 #: ../panel/main.c:405
-msgid "Do you want to start the panel? If you do, make sure you save the session on logout, so the panel is automatically started the next time you login."
-msgstr "Želite li pokrenuti ploču?Ako želite spremite sesiju kod odjave,tako da se ploča automatiski pokrene idući put kada se prijavite."
+msgid ""
+"Do you want to start the panel? If you do, make sure you save the session on "
+"logout, so the panel is automatically started the next time you login."
+msgstr ""
+"Želite li pokrenuti ploču?Ako želite spremite sesiju kod odjave,tako da se "
+"ploča automatiski pokrene idući put kada se prijavite."
 
 #: ../panel/main.c:408 ../panel/main.c:422
 #, c-format
@@ -197,8 +207,12 @@ msgid "Failed to launch the migration application"
 msgstr ""
 
 #: ../panel/panel-application.c:1446 ../plugins/actions/actions.c:413
-msgid "You have started X without session manager. Clicking Quit will close the X server."
-msgstr "Pokrenuli ste X bez upravitelja sesijama.Klik na Isključi će zatvoriti X poslužitelj."
+msgid ""
+"You have started X without session manager. Clicking Quit will close the X "
+"server."
+msgstr ""
+"Pokrenuli ste X bez upravitelja sesijama.Klik na Isključi će zatvoriti X "
+"poslužitelj."
 
 #: ../panel/panel-application.c:1447 ../plugins/actions/actions.c:414
 msgid "Are you sure you want to quit the panel?"
@@ -210,12 +224,14 @@ msgid "Failed to execute command \"%s\""
 msgstr "Neuspjeh u izvršenju naredbe \"%s\""
 
 #: ../panel/panel-dbus-client.c:209
-msgid "Invalid plugin event syntax specified. Use PLUGIN-NAME:NAME[:TYPE:VALUE]."
+msgid ""
+"Invalid plugin event syntax specified. Use PLUGIN-NAME:NAME[:TYPE:VALUE]."
 msgstr ""
 
 #: ../panel/panel-dbus-client.c:242
 #, c-format
-msgid "Invalid hint type \"%s\". Valid types are bool, double, int, string and uint."
+msgid ""
+"Invalid hint type \"%s\". Valid types are bool, double, int, string and uint."
 msgstr ""
 
 #: ../panel/panel-dialogs.c:76
@@ -242,8 +258,12 @@ msgid "Panel %d"
 msgstr "Ploča %d"
 
 #: ../panel/panel-dialogs.c:183
-msgid "Because the panel is running in kiosk mode, you are not allowed to make changes to the panel configuration as a regular user"
-msgstr "Ploča je pokrenuta u kiosk mudu,pa ne možete napraviti promjene konfiguraciji ploče kao običan korisnik."
+msgid ""
+"Because the panel is running in kiosk mode, you are not allowed to make "
+"changes to the panel configuration as a regular user"
+msgstr ""
+"Ploča je pokrenuta u kiosk mudu,pa ne možete napraviti promjene "
+"konfiguraciji ploče kao običan korisnik."
 
 #: ../panel/panel-dialogs.c:185
 msgid "Modifying the panel is not allowed"
@@ -269,12 +289,19 @@ msgstr "Ovdje unesite frazu traženja"
 #: ../panel/panel-plugin-external.c:420
 #, c-format
 msgid "Plugin \"%s\" unexpectedly left the panel, do you want to restart it?"
-msgstr "Priključak \"%s je neočekivano napustio ploču.želite li ga ponovno pokrenuti?"
+msgstr ""
+"Priključak \"%s je neočekivano napustio ploču.želite li ga ponovno pokrenuti?"
 
 #: ../panel/panel-plugin-external.c:422
 #, c-format
-msgid "The plugin restarted more than once in the last %d seconds. If you press Execute the panel will try to restart the plugin otherwise it will be permanently removed from the panel."
-msgstr "Priključak se restartirao više puta u zadnjih %d sekunda.Ako pritisnete Izvrši ploča će pokušati ponovo pokrenuti priključak,u protivnom će biti trajno uklonjen sa ploče."
+msgid ""
+"The plugin restarted more than once in the last %d seconds. If you press "
+"Execute the panel will try to restart the plugin otherwise it will be "
+"permanently removed from the panel."
+msgstr ""
+"Priključak se restartirao više puta u zadnjih %d sekunda.Ako pritisnete "
+"Izvrši ploča će pokušati ponovo pokrenuti priključak,u protivnom će biti "
+"trajno uklonjen sa ploče."
 
 #: ../panel/panel-preferences-dialog.c:453
 msgid "Automatic"
@@ -337,7 +364,9 @@ msgid "Add new item to this panel"
 msgstr "Dodaj novu stavku na ovu ploču"
 
 #: ../panel/panel-preferences-dialog.glade.h:4
-msgid "Alpha value of the panel background, with 0 being fully transparent and 100 fully opaque."
+msgid ""
+"Alpha value of the panel background, with 0 being fully transparent and 100 "
+"fully opaque."
 msgstr "Alfa vrijednost pozadine ploče između 0 (prozirno) i 100 (neprozirno)."
 
 #: ../panel/panel-preferences-dialog.glade.h:5
@@ -387,8 +416,7 @@ msgstr "Sta_vke"
 msgid "L_ength (%):"
 msgstr "D_užina (%):"
 
-#. I18N: name of the section (frame) in the panel preferences where the user
-#. can define the length and size of the panel
+#. I18N: name of the section (frame) in the panel preferences where the user can define the length and size of the panel
 #: ../panel/panel-preferences-dialog.glade.h:18
 msgid "Measurements"
 msgstr "Mjerenja"
@@ -432,19 +460,26 @@ msgid "Select A Background Image"
 msgstr "Odaberi pozadinsku sliku"
 
 #: ../panel/panel-preferences-dialog.glade.h:29
-msgid "Select this option to automatically increase the length of the panel if the plugins request more space."
-msgstr "Odaberi ovu opciju za automatsko povećanje dužine ploče ako priključak zahtjeva više prostora"
+msgid ""
+"Select this option to automatically increase the length of the panel if the "
+"plugins request more space."
+msgstr ""
+"Odaberi ovu opciju za automatsko povećanje dužine ploče ako priključak "
+"zahtjeva više prostora"
 
 #: ../panel/panel-preferences-dialog.glade.h:30
 msgid "Select this option to extend the panel over multiple monitors."
 msgstr "Odaberite ovu opciju da biste raširili ploču preko više monitora."
 
 #: ../panel/panel-preferences-dialog.glade.h:31
-msgid "Select this option to hide the handles of the panel and lock its position."
+msgid ""
+"Select this option to hide the handles of the panel and lock its position."
 msgstr ""
 
 #: ../panel/panel-preferences-dialog.glade.h:32
-msgid "Select this option to hide the panel when the pointer is not above it. This only works when the panel is attached to a screen edge."
+msgid ""
+"Select this option to hide the panel when the pointer is not above it. This "
+"only works when the panel is attached to a screen edge."
 msgstr ""
 
 #: ../panel/panel-preferences-dialog.glade.h:33
@@ -460,12 +495,20 @@ msgid "Span mo_nitors"
 msgstr ""
 
 #: ../panel/panel-preferences-dialog.glade.h:36
-msgid "Transparency when the pointer is hovering over the panel, with 0 being fully transparent and 100 fully opaque."
-msgstr "Prozirnost kada pokazivač prelazi preko ploče,0 je puna prozirnost i 100 puna neprozirnost."
+msgid ""
+"Transparency when the pointer is hovering over the panel, with 0 being fully "
+"transparent and 100 fully opaque."
+msgstr ""
+"Prozirnost kada pokazivač prelazi preko ploče,0 je puna prozirnost i 100 "
+"puna neprozirnost."
 
 #: ../panel/panel-preferences-dialog.glade.h:37
-msgid "Transparency when the pointer is not hovering over the panel, with 0 being fully transparent and 100 fully opaque."
-msgstr "Prozirnost kada pokazivač ne prelazi preko ploče,0 je puna prozirnost i 100 puna neprozirnost."
+msgid ""
+"Transparency when the pointer is not hovering over the panel, with 0 being "
+"fully transparent and 100 fully opaque."
+msgstr ""
+"Prozirnost kada pokazivač ne prelazi preko ploče,0 je puna prozirnost i 100 "
+"puna neprozirnost."
 
 #: ../panel/panel-preferences-dialog.glade.h:38
 msgid "Vertical"
@@ -535,8 +578,12 @@ msgid "Welcome to the first start of the panel"
 msgstr "Dobrodošli na prvo pokretanje Xfce ploče"
 
 #: ../migrate/main.c:80
-msgid "Because the panel moved to a new system for storing the settings, it has to load a fresh initial configuration."
-msgstr "Zbog pomicanja ploče u novi sustav za pohranu postavki,mora biti učitana svježa početna konfiguracija"
+msgid ""
+"Because the panel moved to a new system for storing the settings, it has to "
+"load a fresh initial configuration."
+msgstr ""
+"Zbog pomicanja ploče u novi sustav za pohranu postavki,mora biti učitana "
+"svježa početna konfiguracija"
 
 #: ../migrate/main.c:83
 msgid "Choose below which setup you want for the first startup."
@@ -666,8 +713,12 @@ msgid "Select A Menu File"
 msgstr "Odaberi datoteku izbornika"
 
 #: ../plugins/applicationsmenu/applicationsmenu-dialog.glade.h:8
-msgid "Select this option to show the generic application name in the menu, for example \"File Manager\" instead of \"Thunar\""
-msgstr "Odaberi ovu opciju za prikaz generičkog imena programa u izborniku,npr.\"Upravitelj datotekama\" umjesto \"Thunar\""
+msgid ""
+"Select this option to show the generic application name in the menu, for "
+"example \"File Manager\" instead of \"Thunar\""
+msgstr ""
+"Odaberi ovu opciju za prikaz generičkog imena programa u izborniku,npr."
+"\"Upravitelj datotekama\" umjesto \"Thunar\""
 
 #: ../plugins/applicationsmenu/applicationsmenu-dialog.glade.h:9
 msgid "Show application d_escription in tooltip"
@@ -797,8 +848,7 @@ msgstr "Prikaži _sekunde"
 msgid "F_ormat:"
 msgstr "F_ormat:"
 
-#. I18N: the fuzziness the *precision* of the fuzzy clock. Time steps of 5, 15
-#. or parts of the day.
+#. I18N: the fuzziness the *precision* of the fuzzy clock. Time steps of 5, 15 or parts of the day.
 #: ../plugins/clock/clock-dialog.glade.h:11
 msgid "F_uzziness:"
 msgstr ""
@@ -834,7 +884,11 @@ msgstr ""
 
 #: ../plugins/clock/clock-dialog.glade.h:20
 #, no-c-format
-msgid "The format describes the date and time parts to insert into the file name. For example, %Y will be substituted with the year, %m with the month and %d with the day. See the documentation of the date utility for additional information."
+msgid ""
+"The format describes the date and time parts to insert into the file name. "
+"For example, %Y will be substituted with the year, %m with the month and %d "
+"with the day. See the documentation of the date utility for additional "
+"information."
 msgstr ""
 
 #: ../plugins/clock/clock-dialog.glade.h:21
@@ -1123,7 +1177,10 @@ msgid "Show a directory tree in a menu"
 msgstr "Pokaži stablo direktorija u izborniku"
 
 #: ../plugins/directorymenu/directorymenu-dialog.glade.h:3
-msgid "Enter a list of patterns that will be used to determine which files are visible in a directory. If you specify more than one pattern here, the list items must be separated with semicolons (e.g. *.txt;*.doc)."
+msgid ""
+"Enter a list of patterns that will be used to determine which files are "
+"visible in a directory. If you specify more than one pattern here, the list "
+"items must be separated with semicolons (e.g. *.txt;*.doc)."
 msgstr ""
 
 #: ../plugins/directorymenu/directorymenu-dialog.glade.h:4
@@ -1215,12 +1272,15 @@ msgid "North"
 msgstr "Sjever"
 
 #: ../plugins/launcher/launcher-dialog.glade.h:16
-msgid "Select this option to disable the tooltips when moving over the panel button or menu items."
+msgid ""
+"Select this option to disable the tooltips when moving over the panel button "
+"or menu items."
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.glade.h:17
 msgid "Select this option to move the clicked menu item to the panel."
-msgstr "Odaberite ovu opciju za pomicanje na ploču stavke na koju ste kliknul.i "
+msgstr ""
+"Odaberite ovu opciju za pomicanje na ploču stavke na koju ste kliknul.i "
 
 #: ../plugins/launcher/launcher-dialog.glade.h:18
 msgid "Show _label instead of icon"
@@ -1269,7 +1329,9 @@ msgid "Number of _rows:"
 msgstr "Broj _redova"
 
 #: ../plugins/pager/pager-dialog.glade.h:4
-msgid "Show a miniature view of the workspace with rectangles for the visible windows"
+msgid ""
+"Show a miniature view of the workspace with rectangles for the visible "
+"windows"
 msgstr ""
 
 #: ../plugins/pager/pager-dialog.glade.h:5
@@ -1340,7 +1402,9 @@ msgstr ""
 
 #. create fake error and show it
 #: ../plugins/systray/systray.c:850
-msgid "Most likely another widget took over the function of a notification area. This area will be unused."
+msgid ""
+"Most likely another widget took over the function of a notification area. "
+"This area will be unused."
 msgstr ""
 
 #: ../plugins/systray/systray.c:852
@@ -1542,7 +1606,9 @@ msgid "Switch between open windows using a menu"
 msgstr "Prebacivanje između prozora koristeći izbornik"
 
 #~ msgid "Failed to remove the desktop file from the config directory"
-#~ msgstr "Neuspjelo uklanjanje datoteke radne površine iz konfiguracijskog direktorija"
+#~ msgstr ""
+#~ "Neuspjelo uklanjanje datoteke radne površine iz konfiguracijskog "
+#~ "direktorija"
 
 #~ msgid "_Number of rows:"
 #~ msgstr "_Broj redova"
